# mu-grakn-playground

./: .gitignore  mu-grakn.cabal  stack.yaml
protobuf/: grakn.proto  options.proto  session.proto
src/: Main.hs  Proto.hs  Server.hs
