name:               mu-grakn
version:            0.1.0.0

-- synopsis:
-- description:
homepage:           https://github.com/
author:             Your name
maintainer:         your@email.com
copyright:          2020 Your name
category:           Web
build-type:         Simple
cabal-version:      >=1.10
extra-source-files: README.md

executable mu-grakn
  hs-source-dirs:   src
  main-is:          Main.hs
  other-modules:    Server, Proto
  ghc-options:      -Wall
  default-language: Haskell2010
  build-depends:
      base            >=4.12  && <5
    , stm             >=2.5   && <3
    , text            >=1.2   && <2
    , transformers    >=0.5   && <0.6
    , mu-grpc-server  >=0.4.0
    , mu-grpc-client  >=0.4.0
    , mu-protobuf     >=0.4.0
    , mu-grpc-common  >=0.4.0
    , mu-rpc          >=0.4.0
    , mu-schema       >=0.3.0
    , bytestring
